tests/org.eclipse.n4js.bugreports.tests/xt-tests/IDEBUG_0318_consistency_VariableFieldPropertyDeclarations.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.bugreports.tests.SpecXtTest END_SETUP  */

function foo() : void {}


// XPECT errors --> "void is not a subtype of any." at "foo()"
var v = foo();


var ol = {
	// XPECT errors --> "void is not a subtype of any." at "foo()"
	prop: foo()
};


class C {
	// XPECT errors --> "void is not a subtype of any." at "foo()"
	f = foo();
}


var c : C;

// XPECT errors --> "any is not a subtype of number." at "v"
var test0 : number = v; // ok

// XPECT errors --> "any is not a subtype of number." at "c.f"
var test1 : number = c.f; // error: "void is not a subtype of number."

// XPECT errors --> "any is not a subtype of number." at "ol.prop"
var test2 : number = ol.prop; // error: "void is not a subtype of number."
